--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1"
   }
 }
