--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt": "~0.4.4",
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1"
   }
 }
